--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,17 @@
     <artifactId>MaintenanceMonitor</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UFT-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UFT-8</project.reporting.outputEncoding>
     </properties>
+
+
+
+
 
 </project>
